# varHandler

./: CMakeLists.txt  README.md
include/: Api.h  Config.h  Database.h  Logger.h  Window.h
lib/imgui/: imgui_widgets.cpp
src/: Api.cpp  Config.cpp  Database.cpp  Logger.cpp  Window.cpp  main.cpp
